samples/_failures_safe/1761198316_e56e4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2baaf32a.c: In function ‘main’:
./samples/SAFE/__tmp_2baaf32a.c:186:12: error: missing terminating " character
  186 |     printf("Enter arithmetic
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2baaf32a.c:186:5: error: expected expression at end of input
  186 |     printf("Enter arithmetic
      |     ^~~~~~
./samples/SAFE/__tmp_2baaf32a.c:186:5: error: expected declaration or statement at end of input
